<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="16dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/loginImage"
        app:layout_constraintBottom_toBottomOf="@+id/loginImage"
        app:layout_constraintStart_toEndOf="@+id/loginImage"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginUrl"
        android:layout_marginTop="80dp"
        app:placeholderText="@string/loginPlaceHolder"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginInputLayout"
        app:layout_constraintStart_toStartOf="@+id/loginInputLayout"
        android:text="@string/forgotUrl"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/forgotButton"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>